# rust_nn_cnn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
rust_nn_cnn/: Cargo.toml
rust_nn_cnn/src/: lib.rs
test_enviornment/: Cargo.toml
test_enviornment/src/: main.rs
