[package]
name = "test_enviornment"
version = "0.1.1"
edition = "2024"

[dependencies]
rust_nn_cnn = { path = "../rust_nn_cnn" }
anyhow = "1"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
